force-app/main/default/objects/QCC_SOQL_Filter_Setting__mdt/QCC_SOQL_Filter_Setting__mdt.object-meta.xml
<CustomObject>
    <label>QCC SOQL Filter Setting</label>
    <pluralLabel>QCC SOQL Filter Settings</pluralLabel>
</CustomObject>