force-app/main/default/objects/QCC_SOQL_Filter_Setting__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>