force-app/main/default/objects/QCC_SOQL_Filter_Setting__mdt/fields/Has_Special_Logic__c.field-meta.xml
<CustomField>
    <fullName>Has_Special_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Special Logic?</label>
    <type>Checkbox</type>
</CustomField>