force-app/main/default/objects/QCC_SOQL_Filter_Setting__mdt/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>