force-app/main/default/objects/QCC_SOQL_Filter_Setting__mdt/fields/Special_Logic_Name__c.field-meta.xml
<CustomField>
    <fullName>Special_Logic_Name__c</fullName>
    <label>Special Logic Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>