force-app/main/default/objects/QCC_SOQL_Filter_Setting__mdt/listViews/All_SOQL_Filter_Settings.listView-meta.xml
<ListView>
    <fullName>All_SOQL_Filter_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Module_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Condition__c</columns>
    <columns>Field_Value__c</columns>
    <columns>Has_Special_Logic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SOQL Filter Settings</label>
</ListView>